--- a/test/gradle.properties
+++ b/test/gradle.properties
@@ -16,6 +16,6 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-signing.keyId=AF4EE9E6
-signing.password=hqshotmail
-signing.secretKeyRingFile=/Users/super/.gnupg/secring.gpg
+PROJ_NAME=bintrayaar
+PROJ_ARTIFACTID=bintrayaar
+PROJ_POM_NAME=Bintray Aar Repository
